2006-09-06  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/SOGoUI/UIxComponent.m ([UIxComponent -selectedDate]): make
	sure the numbers in dateString are formatted so as to take 4 chars
	for the year and 2 for the day and the month, otherwise
	NSCalendarDate will return a nil date.

2006-09-05  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/SOGoUI/UIxComponent.m ([UIxComponent -selectedDate]): add the
	user's timezone abbreviation to the date string passed as parameter to
	NSCalendarDate to generate an accurate date instance. Do the same
	when no date is specified and today is chosen.

	* UI/WebServerResources/UIxAppointmentEditor.js: convert the
	form's time values to integers before comparing them.

	* UI/Scheduler/UIxCalAptListView.m ([UIxCalAptListView -currentStartTime]) 
	([UIxCalAptListView -currentEndTime]): initialize the resulting
	dates timezone with [self viewTimeZone].

	* UI/SOGoUI/UIxComponent.m ([UIxComponent -init]): new
	"viewTimeZone" ivar destined to hold an instance of the user's
	timezone in memory.
	([UIxComponent -viewTimeZone]): take the timezone from the user's
	prefs.

2006-08-30  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/Templates/SchedulerUI/UIxAppointmentEditor.wox: completely
	rearranged the layout.

	* UI/WebServerResources/UIxAppointmentEditor.js: added code to
	manage showing and hiding appointment details.

	* SoObjects/SOGo/SOGoUserFolder.m ([SOGoUserFolder
	-privateContacts:inContext:]): init the SOGoAppointmentFolder's
	timezone by taking the current user's timezone setting.

	* SoObjects/Appointments/SOGoAptMailNotification.m: same as below.

	* SoObjects/Appointments/SOGoAppointmentObject.m
	([SOGoAppointmentObject -changeParticipationStatus:inContext:]):
	set default timezone to EST, although this code should be
	rewritten to handle a system and a user default value.

	* UI/Scheduler/UIxTimeDateControl.m ([UIxTimeDateControl
	-takeValuesFromRequest:_rqinContext:_ctx]): enhanced method to